objects/Payment__c.object
<CustomObject>
    <description>Payments made by a person (Contact) to a Project.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of payment being made.</description>
        <inlineHelpText>Amount of payment being made.</inlineHelpText>
        <label>Amount</label>
        <precision>9</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Person making this payment.</description>
        <inlineHelpText>Person making this payment.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateString__c</fullName>
        <formula>LPAD(TEXT(MONTH(Date__c)),2 ,&apos;0&apos;) + &quot;/&quot; +  LPAD(TEXT(DAY(Date__c)),2 ,&apos;0&apos;) + &quot;/&quot; +TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date the payment is made.</description>
        <inlineHelpText>Date the payment is made.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Project this payment is being made to.</description>
        <inlineHelpText>Project this payment is being made to.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PYMT-{00000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>